# engagement-detection

./: .gitignore  bentuk_landmarks.txt  pyproject.toml
engagement_deteksi_live/: detect_model_exist.py  engagement_video_feed.py  pyproject.toml  video_feed_facemesh.py  webapp.py
engagement_deteksi_live/templates/: index.html
kamera lewat jaringan/: camera_net.py  video_viewer.py
