[project]
name = "skripsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.2",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "scikit-learn==1.6.0",
]

[tool.uv.workspace]
members = [
    "engagement_deteksi_live",
]
