[project]
name = "engagement-deteksi-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "mediapipe>=0.10.14",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "scikit-learn==1.6.0",
]
